Bug 1109861 - Add delegate to manage waiting for the CDM to mark key usable. r=kinetik