dom/media/fmp4/eme/EMEH264Decoder.cpp
@@ -34,8 +34,12 @@ EMEH264Decoder::EMEH264Decoder(CDMProxy* aProxy,
   , mTaskQueue(aTaskQueue)
   , mCallback(aCallback)
   , mLastStreamOffset(0)
+  , mSamplesWaitingForKey(new SamplesWaitingForKey(this, mTaskQueue, mProxy))
   , mMonitor("EMEH264Decoder")
   , mFlushComplete(false)
+#ifdef DEBUG
+  , mIsShutdown(false)
+#endif
 {
 }
 
@@ -46,6 +50,7 @@ nsresult
 EMEH264Decoder::Init()
 {
   // Note: this runs on the decode task queue.
+  MOZ_ASSERT(!mIsShutdown);
 
   mMPS = do_GetService("@mozilla.org/gecko-media-plugin-service;1");
   MOZ_ASSERT(mMPS);
@@ -65,6 +70,11 @@ nsresult
 EMEH264Decoder::Input(MP4Sample* aSample)
 {
   MOZ_ASSERT(!IsOnGMPThread()); // Runs on the decode task queue.
+  MOZ_ASSERT(!mIsShutdown);
+
+  if (mSamplesWaitingForKey->WaitIfKeyNotUsable(aSample)) {
+    return NS_OK;
+  }
 
   nsRefPtr<nsIRunnable> task(new DeliverSample(this, aSample));
   nsresult rv = mGMPThread->Dispatch(task, NS_DISPATCH_NORMAL);
@@ -77,6 +87,7 @@ nsresult
 EMEH264Decoder::Flush()
 {
   MOZ_ASSERT(!IsOnGMPThread()); // Runs on the decode task queue.
+  MOZ_ASSERT(!mIsShutdown);
 
   {
     MonitorAutoLock mon(mMonitor);
@@ -102,6 +113,7 @@ nsresult
 EMEH264Decoder::Drain()
 {
   MOZ_ASSERT(!IsOnGMPThread()); // Runs on the decode task queue.
+  MOZ_ASSERT(!mIsShutdown);
 
   nsRefPtr<nsIRunnable> task;
   task = NS_NewRunnableMethod(this, &EMEH264Decoder::GmpDrain);
@@ -114,11 +126,19 @@ nsresult
 EMEH264Decoder::Shutdown()
 {
   MOZ_ASSERT(!IsOnGMPThread()); // Runs on the decode task queue.
+  MOZ_ASSERT(!mIsShutdown);
+#ifdef DEBUG
+  mIsShutdown = true;
+#endif
 
   nsRefPtr<nsIRunnable> task;
   task = NS_NewRunnableMethod(this, &EMEH264Decoder::GmpShutdown);
   nsresult rv = mGMPThread->Dispatch(task, NS_DISPATCH_SYNC);
   NS_ENSURE_SUCCESS(rv, rv);
+
+  mSamplesWaitingForKey->BreakCycles();
+  mSamplesWaitingForKey = nullptr;
+
   return NS_OK;
 }
 
@@ -211,9 +231,15 @@ void
 EMEH264Decoder::Error(GMPErr aErr)
 {
   MOZ_ASSERT(IsOnGMPThread());
-  EME_LOG("EMEH264Decoder::Error");
-  mCallback->Error();
-  GmpShutdown();
+  EME_LOG("EMEH264Decoder::Error %d", aErr);
+  if (aErr == GMPNoKeyErr) {
+    // The GMP failed to decrypt a frame due to not having a key. This can
+    // happen if a key expires or a session is closed during playback.
+    NS_WARNING("GMP failed to decrypt due to lack of key");
+  } else {
+    mCallback->Error();
+    GmpShutdown();
+  }
 }
 
 void
@@ -276,18 +302,6 @@ EMEH264Decoder::GmpInput(MP4Sample* aSample)
     mCallback->Error();
     return NS_ERROR_FAILURE;
   }
-
-  if (sample->crypto.valid) {
-    CDMCaps::AutoLock caps(mProxy->Capabilites());
-    MOZ_ASSERT(caps.CanDecryptAndDecodeVideo());
-    const auto& keyid = sample->crypto.key;
-    if (!caps.IsKeyUsable(keyid)) {
-      nsRefPtr<nsIRunnable> task(new DeliverSample(this, sample.forget()));
-      caps.CallWhenKeyUsable(keyid, task, mGMPThread);
-      return NS_OK;
-    }
-  }
-
 
   mLastStreamOffset = sample->byte_offset;
 
