dom/media/gmp/gmp-api/gmp-errors.h
@@ -47,6 +47,7 @@ typedef enum {
   GMPCryptoErr = 10,
   GMPEndOfEnumeration = 11,
   GMPInvalidArgErr = 12,
+  GMPAbortedErr = 13,
   GMPLastErr // Placeholder, must be last. This enum's values must remain consecutive!
 } GMPErr;
 
